# ComfyUI-LinearTransition

./: README.md  __init__.py  linear_transition.py  pyproject.toml
